HomePage works with cover/cards/admin/fpattern

--- a/fe/src/app/components/card_prototype/card_container.component.scss
+++ b/fe/src/app/components/card_prototype/card_container.component.scss
@@ -1,3 +1,7 @@
 :host[class*="card-"] .card {
     flex: 1 0 35ch;
 }
+
+:host[class*="card-"] .card.frmdb-card-horizontal {
+    flex: 1 0 100%;
+}
