--- a/fe/src/app/components/page/page.component.html
+++ b/fe/src/app/components/page/page.component.html
@@ -1,2 +1,5 @@
 <frmdb-ly_admin *ngIf="page?.layout == 'ly_admin'" [brandName]="page?.brandName" [logoUrl]="page?.logoUrl"></frmdb-ly_admin>
 <frmdb-ly_cover *ngIf="page?.layout == 'ly_cover'" [brandName]="page?.brandName" [logoUrl]="page?.logoUrl"></frmdb-ly_cover>
+<frmdb-ly_cards *ngIf="page?.layout == 'ly_cards'" [brandName]="page?.brandName" [logoUrl]="page?.logoUrl"></frmdb-ly_cards>
+<frmdb-ly_cards *ngIf="page?.layout == 'ly_fpattern'" [brandName]="page?.brandName" [logoUrl]="page?.logoUrl"></frmdb-ly_cards>
+<frmdb-ly_cards *ngIf="page?.layout == 'ly_grid'" [brandName]="page?.brandName" [logoUrl]="page?.logoUrl"></frmdb-ly_cards>
