--- a/fe/src/app/components/ly_cards/ly_cards.component.html
+++ b/fe/src/app/components/ly_cards/ly_cards.component.html
@@ -7,3 +7,8 @@
 <main role="main" class="inner cover">
     <router-outlet></router-outlet>
 </main>
+
+<footer class="pt-4 my-md-5 pt-md-5 border-top">
+    <nav frmdb-v_nav class="nav bg-none">
+    </nav>
+</footer>
