--- a/fe/src/app/components/v_nav/v_nav.component.html
+++ b/fe/src/app/components/v_nav/v_nav.component.html
@@ -1,1 +1,1 @@
-<ul frmdb-v_nav_segment [nav]="navigationItemsTree" class="nav"></ul>
+<ul frmdb-v_nav_segment [nav]="navigationItemsTree" class="nav flex-column"></ul>
