--- a/fe/src/app/components/ly_admin/ly_admin.component.html
+++ b/fe/src/app/components/ly_admin/ly_admin.component.html
@@ -1,7 +1,7 @@
 <nav frmdb-h_nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap navbar-expand-md p-0 shadow frmdb-fixed-top-0"></nav>
 <div class="container-fluid">
     <div class="row">
-        <nav frmdb-v_nav class="col-md-2 d-none d-md-block bg-light sidebar">
+        <nav frmdb-v_nav class="col-md-2 d-none d-md-block bg-light sidebar frmdb-fixed-top-0">
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
