--- a/fe/src/app/components/table/table.component.html
+++ b/fe/src/app/components/table/table.component.html
@@ -3,12 +3,17 @@
     <button (click)="addRow()">Add</button>
     <button (click)="deleteRow()">Delete</button>
     <ag-grid-angular #agGrid class="ag-theme-balham" rowHeight="25" enableColResize="true"
-        [frameworkComponents]="frameworkComponents" [defaultColDef]="defaultColDef" (rowDoubleClicked)="onRowDoubleClicked($event)"
+        [frameworkComponents]="frameworkComponents" 
+        [defaultColDef]="defaultColDef"
+        (rowDoubleClicked)="onRowDoubleClicked($event)"
         (rowClicked)="onRowClicked($event)"
         (cellFocused)="onCellFocused($event)" enableSorting="true" enableFilter="true" floatingFilter="true"
-        [autoGroupColumnDef]="autoGroupColumnDef" [sideBar]="sideBar" (gridReady)="onGridReady($event)" (columnMoved)="columnMoving($event)"
-        (dragStopped)="columnMoved($event)" (columnResized)="columnResized($event)" (filterChanged)="filterChanged($event)"
-        (sortChanged)="sortChanged($event)" rowModelType="serverSide" enableRangeSelection="true" [statusBar]="statusBar"
+        [autoGroupColumnDef]="autoGroupColumnDef" [sideBar]="sideBar" 
+        (gridReady)="onGridReady($event)" (columnMoved)="columnMoving($event)"
+        (dragStopped)="columnMoved($event)" (columnResized)="columnResized($event)" 
+        (filterChanged)="filterChanged($event)"
+        (sortChanged)="sortChanged($event)" rowModelType="serverSide" enableRangeSelection="true" 
+        [statusBar]="statusBar"
         (firstDataRendered)="onFirstDataRendered($event)"
     >
     </ag-grid-angular>
