started adding booking app

--- a/fe/src/app/components/grid_row/grid_row.component.scss
+++ b/fe/src/app/components/grid_row/grid_row.component.scss
@@ -9,6 +9,6 @@
     border-color: transparent;
     width:100%;
     &.outline {
-        border-color: lightgray;
+        border-color: rgb(245, 245, 245);
     }
 }
