finished fpattern for table.component

--- a/fe/src/app/components/form.component.html
+++ b/fe/src/app/components/form.component.html
@@ -1,4 +1,4 @@
-<frmdb-form_state [stateGraph]="form?.stateGraph" *ngIf="form?.stateGraph"></frmdb-form_state>
+<!-- <frmdb-form_state [stateGraph]="form?.stateGraph" *ngIf="form?.stateGraph"></frmdb-form_state> -->
 <ng-container [frmdbPageItems]="form?.childNodes" [formgrp]="theFormGroup" [fullpath]="''" [rdonly]="rdonly"></ng-container>
 
 <div class="frmdb-form-status">
