--- a/fe/src/app/components/ly_cards/ly_cards.component.html
+++ b/fe/src/app/components/ly_cards/ly_cards.component.html
@@ -8,7 +8,7 @@
     <router-outlet></router-outlet>
 </main>
 
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
+<footer style="position: fixed; bottom: 0" class="pt-4 my-md-5 pt-md-5 border-top">
     <nav frmdb-v_nav class="nav bg-none">
     </nav>
 </footer>
