--- a/fe/src/app/components/table/table.component.html
+++ b/fe/src/app/components/table/table.component.html
@@ -1,13 +1,15 @@
 <div class="frmdb-table-wrapper">
-    <button (click)="excel()">Excel</button>
-    <button (click)="addRow()">Add</button>
-    <button (click)="deleteRow()">Delete</button>
-    <ag-grid-angular #agGrid class="ag-theme-balham" rowHeight="25" enableColResize="true"
+    <!-- [rowHeight]="rowHeight" -->
+    <ag-grid-angular #agGrid class="ag-theme-balham" 
+        [getRowHeight]="getRowHeight"
+        [headerHeight]="headerHeight"
+        enableColResize="true"
+        (gridSizeChanged)="onGridSizeChanged()"
         [frameworkComponents]="frameworkComponents" 
         [defaultColDef]="defaultColDef"
         (rowDoubleClicked)="onRowDoubleClicked($event)"
         (rowClicked)="onRowClicked($event)"
-        (cellFocused)="onCellFocused($event)" enableSorting="true" enableFilter="true" floatingFilter="true"
+        (cellFocused)="onCellFocused($event)" enableSorting="true" enableFilter="true" floatingFilter="false"
         [autoGroupColumnDef]="autoGroupColumnDef" [sideBar]="sideBar" 
         (gridReady)="onGridReady($event)" (columnMoved)="columnMoving($event)"
         (dragStopped)="columnMoved($event)" (columnResized)="columnResized($event)" 
