--- a/fe/src/app/components/form_autocomplete/form_autocomplete.component.html
+++ b/fe/src/app/components/form_autocomplete/form_autocomplete.component.html
@@ -9,21 +9,24 @@
     (keydown.arrowdown)="nextSuggestion()" 
     (keydown.arrowup)="prevSuggestion()"
 />
-
-<table [class.visible]="popupOpened" class="frmdb-autocomplete_popup table table-striped table-sm">
-    <thead>
-        <tr>
-            <th *ngFor="let relatedCtrl of relatedControls">
-                {{relatedCtrl.refPropertyName | i18n}}
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let option of autoCompleteState?.options; let idx = index" (click)="selectOption(option)">
-            <td [class.selected]="currentOptionIdx == idx" *ngFor="let relatedCtrl of relatedControls">
-                <span *ngIf="relatedCtrl.propertyName === inputElement.propertyName" [innerHtml]="highlightOption(option)"></span>
-                <span *ngIf="relatedCtrl.propertyName !== inputElement.propertyName">{{option[relatedCtrl.propertyName]}}</span>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="position-relative">
+    <div class="card frmdb-autocomplete_popup" [class.visible]="popupOpened">
+        <table class="table table-striped table-sm">
+            <thead>
+                <tr>
+                    <th *ngFor="let relatedCtrl of relatedControls" class="border-top-0">
+                        {{relatedCtrl.refPropertyName | i18n}}
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let option of autoCompleteState?.options; let idx = index" (click)="selectOption(option)">
+                    <td [class.selected]="currentOptionIdx == idx" *ngFor="let relatedCtrl of relatedControls">
+                        <span *ngIf="relatedCtrl.propertyName === inputElement.propertyName" [innerHtml]="highlightOption(option)"></span>
+                        <span *ngIf="relatedCtrl.propertyName !== inputElement.propertyName">{{option[relatedCtrl.propertyName]}}</span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
