--- a/fe/src/app/components/page/page.component.html
+++ b/fe/src/app/components/page/page.component.html
@@ -3,8 +3,8 @@
 <frmdb-ly_cards *ngIf="page?.layout == 'ly_cards'" [brandName]="page?.brandName" [logoUrl]="page?.logoUrl"></frmdb-ly_cards>
 <frmdb-ly_cards *ngIf="page?.layout == 'ly_fpattern'" [brandName]="page?.brandName" [logoUrl]="page?.logoUrl"></frmdb-ly_cards>
 <frmdb-ly_cards *ngIf="page?.layout == 'ly_grid'" [brandName]="page?.brandName" [logoUrl]="page?.logoUrl"></frmdb-ly_cards>
-
-<ul style="position: fixed; bottom: 0" class="w-100">
+    
+<ul class="w-100 fixed-bottom mb-0 frmdb-copy">
     <li style="font-size: 50%; color: lightgrey">
             Powered by
             <a href="http://formuladb.io" target="_blank">formuladb.io</a> 
