--- a/fe/src/app/components/table/table-fpattern.component.html
+++ b/fe/src/app/components/table/table-fpattern.component.html
@@ -3,6 +3,18 @@
         <img [src]="dataObj.picture" width="100%" height="100%" />
     </div>
     <div class="col-md-8">
-        <p *ngFor="let key of objectKeys(dataObj)">{{dataObj[key]}}</p>
+        <ng-container *ngFor="let key of getProps(dataObj)">
+            <h3 *ngIf="key == 'title'">{{dataObj[key]}}</h3>
+            <h4 *ngIf="key == 'name'">{{dataObj[key]}}</h4>
+            <p class="lead text-wrap" *ngIf="key == 'description'">{{dataObj[key]}}</p>
+            <p class="text-wrap" *ngIf="key == 'long_description'">{{dataObj[key]}}</p>
+        </ng-container>
+        <div class="row">
+            <ng-container *ngFor="let key of getProps(dataObj)">
+                <div class="col" *ngIf="key != 'title' && key != 'name' && key != 'description' && key != 'long_description'">
+                    <strong>{{key}} : </strong>{{dataObj[key]}}
+                </div>
+            </ng-container>
+        </div>
     </div>
 </div>
