--- a/fe/src/app/components/date_range_picker/date_range_picker.component.html
+++ b/fe/src/app/components/date_range_picker/date_range_picker.component.html
@@ -1,3 +1,17 @@
-<p>
-  date-range-picker works!
-</p>
+<div>
+  <ngb-datepicker #dp (select)="onDateSelection($event)" [displayMonths]="2" [dayTemplate]="t" outsideDays="hidden">
+  </ngb-datepicker>
+  <div class="position-relative">
+    <div class="d-flex justify-content-between position-absolute w-100 frmdb-from-to">
+      <span class="badge badge-pill badge-primary">{{formatDate(fromDate)}}</span>
+      <span class="badge badge-pill badge-primary">{{formatDate(toDate)}}</span>
+    </div>
+  </div>
+</div>
+
+<ng-template #t let-date let-focused="focused">
+  <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)" [class.faded]="isHovered(date) || isInside(date)"
+    (mouseenter)="hoveredDate = date" (mouseleave)="hoveredDate = null">
+    {{ date.day }}
+  </span>
+</ng-template>
