--- a/fe/src/app/components/date_range_picker/date_range_picker.component.scss
+++ b/fe/src/app/components/date_range_picker/date_range_picker.component.scss
@@ -2,3 +2,28 @@
  * © 2018 S.C. FORMULA DATABASE S.R.L.
  * License TBD
  */
+
+ .custom-day {
+    text-align: center;
+    padding: 0.185rem 0.25rem;
+    display: inline-block;
+    height: 2rem;
+    width: 2rem;
+  }
+  .custom-day.focused {
+    background-color: #e6e6e6;
+  }
+  .custom-day.range, .custom-day:hover {
+    background-color: rgb(2, 117, 216);
+    color: white;
+  }
+  .custom-day.faded {
+    background-color: rgba(2, 117, 216, 0.5);
+  }
+
+  .frmdb-from-to {
+      position: absolute; 
+      top: -1.8em;
+      width: 12ch;
+      padding: 0 1em 0 1em;
+  }
