--- a/fe/src/app/components/date_range_picker/date_range_picker.component.html
+++ b/fe/src/app/components/date_range_picker/date_range_picker.component.html
@@ -13,6 +13,7 @@
 
 <ng-template #t let-date let-focused="focused">
   <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)" [class.faded]="isHovered(date) || isInside(date)"
+    [class.booked]="isBooked(date)" [class.overlap]="isOverlap(date)"
     (mouseenter)="hoveredDate = date" (mouseleave)="hoveredDate = null">
     {{ date.day }}
   </span>
