--- a/fe/src/app/components/date_range_picker/date_range_picker.component.scss
+++ b/fe/src/app/components/date_range_picker/date_range_picker.component.scss
@@ -20,6 +20,12 @@
   .custom-day.faded {
     background-color: rgba(2, 117, 216, 0.5);
   }
+  .custom-day.booked {
+    background-color: rgba(154, 155, 156, 0.5);
+  }
+  .custom-day.overlap {
+    background-color: coral;
+  }
 
   .frmdb-from-to {
       position: absolute; 
