added drag handle and context menu to grid_col

--- a/fe/src/app/dev-mode-overlay/context-menu/context-menu.component.scss
+++ b/fe/src/app/dev-mode-overlay/context-menu/context-menu.component.scss
@@ -1,6 +1,6 @@
 :host {
     position: absolute;
-    top: .5rem;
+    top: 0;
     right: 0;
     cursor: context-menu;
     .context-menu-button {
