--- a/fe/src/app/components/grid_col/grid_col.component.html
+++ b/fe/src/app/components/grid_col/grid_col.component.html
@@ -1,6 +1,14 @@
 <ng-container *ngFor="let childEl of nodel.childNodes">
-  <drop-handle position="before" [item]="childEl" orientation="horizontal"></drop-handle>
-  <ng-container [frmdbPageItems]="[childEl]" [formgrp]="formgrp" [fullpath]="fullpath"
-    [rdonly]="rdonly"></ng-container>
+  <div draggable="true" style="position: relative" (dragstart)="dragStart($event)" (dragend)="dragEnd($event)">
+    <fa-icon [icon]="dragIcon" *ngIf="editMode" class="drag-handle fa-xs" #dragHandle [id]="'drag_'+nodel._id" (mousedown)="checkHandle($event)">
+      </fa-icon>
+    <!-- <form-context-menu [item]="childEl" [canDelete]="true" [availableChildren]="getAvailableChildren()"
+      [availableTypes]="getAvailableTypes()" ></form-context-menu> -->
+    <form-context-menu [item]="childEl" *ngIf="editMode" [canDelete]="true"></form-context-menu>
+
+    <drop-handle position="before" [item]="childEl" orientation="horizontal"></drop-handle>
+    <ng-container [frmdbPageItems]="[childEl]" [formgrp]="formgrp" [fullpath]="fullpath"
+      [rdonly]="rdonly"></ng-container>
+  </div>
 </ng-container>
 <drop-handle position="append" *ngIf="nodel.childNodes" [item]="nodel" orientation="horizontal"></drop-handle>
