--- a/fe/src/app/components/grid_row/grid_row.component.scss
+++ b/fe/src/app/components/grid_row/grid_row.component.scss
@@ -9,6 +9,6 @@
     border-color: transparent;
     width:100%;
     &.outline {
-        border-color: rgb(218, 217, 217);
+        // border-color: rgb(218, 217, 217);
     }
 }
