--- a/fe/src/app/dev-mode-overlay/drop-handle/drop-handle.component.html
+++ b/fe/src/app/dev-mode-overlay/drop-handle/drop-handle.component.html
@@ -1,1 +1,1 @@
-<div class="drop-handle" [ngClass]="{'vertical':orientation==='vertical','horizontal':orientation==='horizontal'}"></div>
+<div class="drop-handle" [class.dragover]="dragOver"></div>
