--- a/fe/src/app/dev-mode-overlay/drop-handle/drop-handle.component.scss
+++ b/fe/src/app/dev-mode-overlay/drop-handle/drop-handle.component.scss
@@ -1,11 +1,7 @@
 :host {
-    border-style: solid;
-    border-width: 1px;
-    border-color: transparent;
 
     &.visible {
-        border-style: dashed;
-        border-color: gray;
+        background-color: rgb(240, 240, 240);
     }
     &.vertical {
         width: 5px;
@@ -16,5 +12,17 @@
         height: 5px;
         left: 0;
         right: 0;
+    }
+
+    .drop-handle {
+        border-style: solid !important;
+        border-width: 1px !important;
+        border-color: transparent;        
+        width: 100%;
+        height: 100%;
+    }
+    .drop-handle.dragover {
+        border-style: dashed !important;
+        border-color: grey !important;
     }
 }
