new ag-grid license

--- a/fe/src/app/components/grid_col/grid_col.component.scss
+++ b/fe/src/app/components/grid_col/grid_col.component.scss
@@ -2,7 +2,7 @@
     position: absolute;
     right: 0.5rem;
     top: 0;
-    color: lightgrey;
+    color: rgb(234,88,72);
     // width: .5rem;
     // height: .5rem;
     z-index: 1000;
