--- a/fe/src/app/dev-mode-overlay/context-menu/context-menu.component.scss
+++ b/fe/src/app/dev-mode-overlay/context-menu/context-menu.component.scss
@@ -4,7 +4,7 @@
     right: 0;
     cursor: context-menu;
     .context-menu-button {
-        color: lightgrey;
+        color: rgb(234,88,72);
         padding: .1rem;
         border-bottom: 1px solid transparent;
         &:hover {
