more work on dacris

--- a/fe/src/app/components/h_nav/h_nav.component.html
+++ b/fe/src/app/components/h_nav/h_nav.component.html
@@ -1,4 +1,4 @@
-<a class="col-md-2 navbar-brand" href="#">Brand</a>
+<a class="col-md-2 navbar-brand" href="#">{{brandName || 'Brand'}}</a>
 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#frmdb-h_nav-id" aria-controls="frmdb-h_nav-id" aria-expanded="false"
     aria-label="Toggle navigation">
