--- a/fe/src/app/components/table/table.component.html
+++ b/fe/src/app/components/table/table.component.html
@@ -16,6 +16,7 @@
         (filterChanged)="filterChanged($event)"
         (sortChanged)="sortChanged($event)" rowModelType="serverSide" enableRangeSelection="true" 
         [statusBar]="statusBar"
+        [excelStyles]="excelStyles"
         (firstDataRendered)="onFirstDataRendered($event)"
     >
     </ag-grid-angular>
