--- a/fe/src/app/components/table/table.component.scss
+++ b/fe/src/app/components/table/table.component.scss
@@ -54,3 +54,7 @@
 ::ng-deep .frmdb-table-wrapper .ag-theme-balham .ag-root {
     border: 0px;
 }
+
+::ng-deep .yellowBackground {
+    background-color:#fffb16;
+}
