--- a/fe/src/app/components/table/table.component.html
+++ b/fe/src/app/components/table/table.component.html
@@ -9,11 +9,12 @@
         [defaultColDef]="defaultColDef"
         (rowDoubleClicked)="onRowDoubleClicked($event)"
         (rowClicked)="onRowClicked($event)"
-        (cellFocused)="onCellFocused($event)" enableSorting="true" enableFilter="true" floatingFilter="false"
+        (cellFocused)="onCellFocused($event)" enableSorting="true" enableFilter="true" floatingFilter="true"
         [autoGroupColumnDef]="autoGroupColumnDef" [sideBar]="sideBar" 
         (gridReady)="onGridReady($event)" (columnMoved)="columnMoving($event)"
         (dragStopped)="columnMoved($event)" (columnResized)="columnResized($event)" 
         (filterChanged)="filterChanged($event)"
+        suppressClipboardPaste="true"
         (sortChanged)="sortChanged($event)" rowModelType="serverSide" enableRangeSelection="true" 
         [statusBar]="statusBar"
         [excelStyles]="excelStyles"
