--- a/fe/src/styles.scss
+++ b/fe/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import './styles/_sizing.css';
-@import './styles/_frmdb.css';
+@import './assets/themes/basic.min.css';
 
 .frmdb-dev-mode-on .frmdb-fixed-top-0 {
     top: 49px !important;
