--- a/fe/src/app/components/page/page.component.scss
+++ b/fe/src/app/components/page/page.component.scss
@@ -3,9 +3,9 @@
 }
 
 .main-pt-slim {
-    padding-top: calc(var(--nav-link-height) - var(--nav-link-padding-y) * 2);
+    padding-top: calc(32px + var(--nav-link-height) - var(--nav-link-padding-y) * 2);
 }
 
 .main-pt {
-    padding-top: var(--nav-link-height);
+    padding-top: calc(32px + var(--nav-link-height));
 }
