--- a/fe/src/app/components/table/table-tools.component.html
+++ b/fe/src/app/components/table/table-tools.component.html
@@ -1,5 +1,5 @@
 <div style="text-align: center">
-    <button (click)="excel()">Excel</button>
+    <button (click)="excel()">Export Excel</button>
     <button (click)="addRow()">Add</button>
     <button (click)="deleteRow()">Delete</button>
 </div>
