made header/footer/sidebar hide so table can be embedded in iframe

--- a/fe/src/app/components/page/page.component.scss
+++ b/fe/src/app/components/page/page.component.scss
@@ -2,10 +2,11 @@
     background-color: white;
 }
 
-.main-pt-slim {
+
+[topNavLook="slim"] .frmdb-main-section {
     padding-top: calc(32px + var(--nav-link-height) - var(--nav-link-padding-y) * 2);
 }
 
-.main-pt {
+[topNavLook="default"] .frmdb-main-section {
     padding-top: calc(32px + var(--nav-link-height));
 }
