--- a/fe/src/app/components/table/table.component.scss
+++ b/fe/src/app/components/table/table.component.scss
@@ -33,6 +33,7 @@
 ::ng-deep {
     ag-grid-angular {
         height: 100%;
+        width: 100%;
     }
 
     .ag-theme-balham .ag-header-cell-label .ag-header-cell-text {
