--- a/fe/src/app/components/page/page.component.html
+++ b/fe/src/app/components/page/page.component.html
@@ -1,24 +1,24 @@
-<div class="container-fluid">
-    <div>
-        <nav [class.p-0]="page?.hnavLook == 'slim'" frmdb-h_nav
+<div class="container" [attr.topNavLook]="page?.topNavLook">
+    <div *ngIf="page?.header !== 'hd_none'">
+        <nav [class.p-0]="page?.topNavLook == 'slim'" frmdb-h_nav
             class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap navbar-expand-md shadow frmdb-fixed-top-0" [brandName]="page?.brandName"></nav>
     </div>
-    <div class="row" [class.main-pt-slim]="page?.hnavLook == 'slim'" [class.main-pt]="page?.hnavLook != 'slim'" >
-        <nav *ngIf="!page?.sidebarOff" frmdb-v_nav class="col-md-2 d-none d-md-block bg-light sidebar frmdb-fixed-top-0">
+    <div class="row frmdb-main-section">
+        <nav *ngIf="page?.sideNavLook !== 'sn_none'" frmdb-v_nav class="col-md-2 d-none d-md-block bg-light sidebar frmdb-fixed-top-0">
         </nav>
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+        <main role="main" [class.col-md-10]="page?.sideNavLook !== 'sn_none'" class="col ml-sm-auto px-4">
             <router-outlet></router-outlet>
         </main>
     </div>
 </div>
 
-<footer class="bg-white border-top fixed-bottom pb-1">
-    <nav frmdb-v_nav *ngIf="page?.sidebarOff" class="nav bg-none">
+<footer class="bg-white border-top fixed-bottom pb-1" *ngIf="page?.footerLook !== 'ft_none'">
+    <nav frmdb-v_nav *ngIf="page?.sideNavLook === 'sn_none'" class="nav bg-none">
     </nav>
 </footer>
 <ul class="w-100 fixed-bottom mb-0 frmdb-copy">
-    <li style="font-size: 50%; color: lightgrey">
+    <li style="font-size: 60%; color: lightgrey">
         Powered by
         <a href="http://formuladb.io" target="_blank">formuladb.io</a>
         &copy; 2018 S.C. FORMULA DATABASE S.R.L.
