--- a/fe/src/app/components/page/page.component.html
+++ b/fe/src/app/components/page/page.component.html
@@ -1,4 +1,4 @@
-<div class="container" [attr.topNavLook]="page?.topNavLook">
+<div class="container-fluid" [attr.topNavLook]="page?.topNavLook">
     <div *ngIf="page?.header !== 'hd_none'">
         <nav [class.p-0]="page?.topNavLook == 'slim'" frmdb-h_nav
             class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap navbar-expand-md shadow frmdb-fixed-top-0" [brandName]="page?.brandName"></nav>
