work on refactoring page=form=table

--- a/fe/src/app/components/frmdb-page.component.html
+++ b/fe/src/app/components/frmdb-page.component.html
@@ -1,4 +1,13 @@
+<!-- <frmdb-form_state [stateGraph]="form?.stateGraph" *ngIf="form?.stateGraph"></frmdb-form_state> -->
 <ng-container [frmdbPageItems]="page?.childNodes" [formgrp]="theFormGroup" [fullpath]="''" [rdonly]="rdonly"></ng-container>
+
+<!-- <div class="frmdb-form-status">
+    <span class="frmdb-form-status-text badge-pill" [class.badge-success]="theFormGroup.status == 'VALID'"
+        [class.badge-danger]="theFormGroup.status == 'INVALID'" [class.badge-warning]="theFormGroup.status == 'PENDING'">
+        {{ theFormGroup.status }}
+    </span>
+</div> -->
+
 
 <!-- <div class="container-fluid" [attr.topnavlook]="page?.topNavLook || 'tn_nav'">
     <div *ngIf="page?.header !== 'hd_none'">
