--- a/fe/src/app/dev-mode-common/formula-code-editor/formula-code-editor.component.html
+++ b/fe/src/app/dev-mode-common/formula-code-editor/formula-code-editor.component.html
@@ -1,5 +1,5 @@
 <div class="formula-code-editor">
-    <div style="margin: 0 5px 0 5px;">
+    <div style="margin: 5px 5px 0 5px;">
       <textarea class="editor-textarea" 
         [disabled]="!editorOn"
         #editor 
