--- a/fe/src/app/dev-mode-overlay/context-menu/context-menu.component.html
+++ b/fe/src/app/dev-mode-overlay/context-menu/context-menu.component.html
@@ -39,7 +39,7 @@
     </select>    
   </li>
   <li>
-    <strong>Related Table Data:</strong>
+    <strong>Related TablePage Data:</strong>
     <select>
         <option disabled value="user_id">user_id</option>
         <option disabled value="user_name">user_name</option>
