--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -7,6 +7,20 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
+                    <fa-icon [icon]="userIcon"></fa-icon>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="userMenu">
+                    <a class="dropdown-item" href="javascript:void(0)">Admin</a>
+                    <a class="dropdown-item" href="javascript:void(0)">User</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Partner</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="javascript:void(0)" (click)="goToAppList()">
+                        <fa-icon title="'Change app' | i18n" [icon]="changeAppIcon" class="fa-sm"></fa-icon>
+                    </a>            
+                </div>
+            </li>        
             <li class="nav-item">
                 <fa-icon *ngIf="!(editorOn$ | async)" [icon]="editIcon" class="far fa-sm" style="visibility: hidden;" (click)="clickStartEdit$.next()">
                 </fa-icon>
@@ -21,7 +35,7 @@
                 <frmdb-formula-code-editor></frmdb-formula-code-editor>
             </form>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" title="Table Data" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" title="TablePage Data" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <fa-icon [icon]="dataIcon" class="fa-sm"></fa-icon>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
@@ -142,21 +156,6 @@
                             style="margin-right: 4px" />
                     </a>
                 </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
-                    <fa-icon [icon]="userIcon"></fa-icon>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                    <a class="dropdown-item" href="javascript:void(0)">Admin</a>
-                    <a class="dropdown-item" href="javascript:void(0)">User</a>
-                    <a class="dropdown-item" href="javascript:void(0)">Partner</a>
-                </div>
-            </li>    
-            <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)" (click)="goToAppList()">
-                    <fa-icon title="'Change app' | i18n" [icon]="changeAppIcon" class="fa-sm"></fa-icon>
-                </a>
             </li>
         </ul>
     </div>
