--- a/fe/src/app/components/form_data_grid/form_data_grid.component.html
+++ b/fe/src/app/components/form_data_grid/form_data_grid.component.html
@@ -1,5 +1,5 @@
 <div class="row mb-3">
-  <ng-container *ngFor="let prop of dataGridElement?.properties">
+  <ng-container *ngFor="let prop of dataGridElement?.autocompleteProperties">
     <div class="col">
         <frmdb-form_input 
           [nodel]="prop"
