--- a/fe/src/app/components/form_data_grid/form_data_grid.component.html
+++ b/fe/src/app/components/form_data_grid/form_data_grid.component.html
@@ -11,7 +11,7 @@
   </ng-container>
 </div>
 <frmdb-table
-  [tableObservable]="table$"
+  [table]="dataGridElement"
   (onDataObjSelected)="onRowClicked($event)"
   (onRowDblClicked)="navigateToFormPage($event)"
 ></frmdb-table>
