--- a/fe/src/app/components/data-grid/data-grid.component.html
+++ b/fe/src/app/components/data-grid/data-grid.component.html
@@ -1,4 +1,4 @@
-<div class="frmdb-table-wrapper" *ngIf="table != null">
+<div class="frmdb-table-wrapper">
     <ag-grid-angular #agGrid class="ag-theme-balham" 
         [getRowHeight]="getRowHeight"
         [headerHeight]="headerHeight"
