--- a/fe/src/app/components/card_prototype/card_container.component.html
+++ b/fe/src/app/components/card_prototype/card_container.component.html
@@ -1,4 +1,14 @@
-<ng-container *ngFor="let childControl of formgrp.get(fullpath)?.controls; let idx = index">
-    <frmdb-card [nodel]="cardContainer" [formgrp]="formgrp" [fullpath]="fullpath + '.' + idx" [rdonly]="rdonly">
-    </frmdb-card>
+<ng-container *ngIf="cardContainer?.tableName">
+    <ng-container *ngFor="let childControl of formgrp.get(fullpath)?.controls; let idx = index">
+        <frmdb-card [nodel]="cardContainer" [formgrp]="formgrp" [fullpath]="fullpath + '.' + idx" [rdonly]="rdonly">
+        </frmdb-card>
+    </ng-container>
+</ng-container>
+<ng-container *ngIf="!cardContainer?.tableName && cardContainer?.refEntityName">
+    HEREE
+    <ng-container *ngFor="let childControl of referencedTableRowsAsFormGroups; let idx = index">
+        yep{{idx}}
+        <frmdb-card [nodel]="cardContainer" [formgrp]="childControl" [fullpath]="" [rdonly]="rdonly">
+        </frmdb-card>
+    </ng-container>
 </ng-container>
