--- a/fe/src/app/components/frmdb-page.component.scss
+++ b/fe/src/app/components/frmdb-page.component.scss
@@ -1,3 +1,10 @@
+:host {
+    overflow: auto;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 .frmdb-form-status {
     position: relative;
 }
