added generic css class handling to components

--- a/fe/src/app/components/form_text/form_text.component.html
+++ b/fe/src/app/components/form_text/form_text.component.html
@@ -1,11 +1,1 @@
-<a [href]="value" *ngIf="representation == 'link'" target="_blank">{{value}}</a>
-<span *ngIf="representation == '_id'">{{value}}</span>
-<span *ngIf="representation == 'string'">{{value}}</span>
-<div *ngIf="representation == 'title'"class="title text-center">
-    <h1>{{value}}</h1>
-</div>
-<h1 *ngIf="representation == 'h1'">{{value}}</h1>
-<h2 *ngIf="representation == 'h2'">{{value}}</h2>
-<h3 *ngIf="representation == 'h3'">{{value}}</h3>
-<h4 *ngIf="representation == 'h4'">{{value}}</h4>
-<p *ngIf="representation == 'paragraph'">{{value}}</p>
+{{value}}
