added more botstrap classes

--- a/fe/src/app/components/card/card.component.html
+++ b/fe/src/app/components/card/card.component.html
@@ -18,5 +18,6 @@
   </div>
 </div>
 -->
-
-<ng-container [frmdbPageItems]="card.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></ng-container>
+<div class="card-body">
+  <ng-container [frmdbPageItems]="card.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></ng-container>
+</div>
