--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
@@ -16,6 +16,10 @@
         }        
     }
 
+    .navbar .navbar-nav .nav-item .nav-link {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 
     .frmdb-themes {
         display: inline-grid;
