--- a/fe/src/app/components/form_text/form_text.component.scss
+++ b/fe/src/app/components/form_text/form_text.component.scss
@@ -5,6 +5,8 @@
     flex-basis: 0;
     flex-grow: 1;
     max-width: 100%;
+    display: block;
+
     &.form-item-highlight {
         background-color: $gray-300 !important;
         input {
