--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -5,11 +5,11 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <div class="collapse navbar-collapse flex-wrap" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
-                    <fa-icon [icon]="userIcon"></fa-icon>
+                <a class="nav-link pr-1" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
+                    <fa-icon [icon]="userIcon"></fa-icon> Admin
                 </a>
                 <div class="dropdown-menu" aria-labelledby="userMenu">
                     <a class="dropdown-item" href="javascript:void(0)">Admin</a>
@@ -20,23 +20,37 @@
                         <fa-icon title="'Change app' | i18n" [icon]="changeAppIcon" class="fa-sm"></fa-icon>
                     </a>            
                 </div>
-            </li>        
-            <li class="nav-item">
-                <fa-icon *ngIf="!(editorOn$ | async)" [icon]="editIcon" class="far fa-sm" style="visibility: hidden;" (click)="clickStartEdit$.next()">
-                </fa-icon>
-                <fa-icon *ngIf="editorOn$ | async" [icon]="discardChangesIcon" class="fa-sm" (click)="clickCancelEdits$.next()" style="color:orange"></fa-icon>
-
-                <fa-icon *ngIf="!(editorOn$ | async)" [icon]="edit2Icon" class="far fa-sm" style="color: rgba(255, 255, 255, 0.5)"
-                    (click)="clickStartEdit$.next()"></fa-icon>
-                <fa-icon *ngIf="editorOn$ | async" [icon]="applyChangesIcon" class="fa-sm" (click)="clickSaveEdits$.next()"
-                    [style.color]="(formulaEditorService.editorExprHasErrors$ | async) ? 'red' : 'green'"></fa-icon>
             </li>
-            <form class="form-inline my-2 my-lg-0">
-                <frmdb-formula-code-editor></frmdb-formula-code-editor>
-            </form>
+            <li class="nav-item"><a class="nav-link disabled p-0" href="#" tabindex="-1" aria-disabled="true">/</a></li>
+            <li class="nav-item"><a class="nav-link disabled pl-1" href="#" tabindex="-1" aria-disabled="true">{{appName}}</a></li>
+            <li class="nav-item"><a class="nav-link disabled p-0" href="#" tabindex="-1" aria-disabled="true">/</a></li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" title="TablePage Data" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <fa-icon [icon]="dataIcon" class="fa-sm"></fa-icon>
+                <a class="nav-link" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
+                    Table
+                </a>
+                <div class="dropdown-menu" aria-labelledby="userMenu">
+                    <a class="dropdown-item" href="javascript:void(0)">Home</a>
+                    <a class="dropdown-item" href="javascript:void(0)">TBD1</a>
+                    <a class="dropdown-item" href="javascript:void(0)">TBD2</a>
+                </div>
+            </li>
+            <li class="nav-item"><a class="nav-link disabled p-0" href="#" tabindex="-1" aria-disabled="true">/</a></li>
+            <li class="nav-item dropdown">
+                <a class="nav-link" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
+                    property
+                </a>
+                <div class="dropdown-menu" aria-labelledby="userMenu">
+                    <a class="dropdown-item" href="javascript:void(0)">tbd 1</a>
+                    <a class="dropdown-item" href="javascript:void(0)">tbd 2</a>
+                    <a class="dropdown-item" href="javascript:void(0)">tbd 3</a>
+                </div>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link" title="TablePage Data" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <!-- <fa-icon [icon]="dataIcon" class="fa-sm"></fa-icon> -->
+                    Data
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                     <a class="dropdown-item" href="javascript:void(0)">
@@ -65,8 +79,9 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" title="Choose Theme" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <fa-icon [icon]="themeIcon" class="fa-sm"></fa-icon>
+                <a class="nav-link pr-1" title="Choose Theme" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <!-- <fa-icon [icon]="themeIcon" class="fa-sm"></fa-icon> -->
+                    Look
                 </a>
                 <div class="dropdown-menu dropdown-menu-right frmdb-theme-dropdown vw-75 text-center" aria-labelledby="dropdown01">
                     <div class="row frmdb-look-filters">
@@ -84,9 +99,11 @@
                     </div>
                 </div>
             </li>
+            <li class="nav-item"><a class="nav-link disabled p-0" href="#" tabindex="-1" aria-disabled="true">&</a></li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" title="Auto-Layout" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <fa-icon [icon]="layoutIcon" class="fa-sm"></fa-icon>
+                <a class="nav-link pl-1" title="Auto-Layout" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <!-- <fa-icon [icon]="layoutIcon" class="fa-sm"></fa-icon> -->
+                    Feel
                 </a>
                 <div class="dropdown-menu dropdown-menu-right frmdb-theme-dropdown vw-75 text-center" aria-labelledby="dropdown01">
                     <a class="dropdown-item" href="javascript:void(0)">Headers</a>
@@ -157,6 +174,23 @@
                     </a>
                 </div>
             </li>
+        </ul>
+        <div class="w-100"></div>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <fa-icon *ngIf="!(editorOn$ | async)" [icon]="editIcon" class="far fa-sm" style="visibility: hidden;" (click)="clickStartEdit$.next()">
+                </fa-icon>
+                <fa-icon *ngIf="editorOn$ | async" [icon]="discardChangesIcon" class="fa-sm" (click)="clickCancelEdits$.next()" style="color:orange"></fa-icon>
+            </li>
+            <li class="nav-item">        
+                <fa-icon *ngIf="!(editorOn$ | async)" [icon]="edit2Icon" class="far fa-sm" style="color: rgba(255, 255, 255, 0.5)" (click)="clickStartEdit$.next()">
+                </fa-icon>
+                <fa-icon *ngIf="editorOn$ | async" [icon]="applyChangesIcon" class="fa-sm" (click)="clickSaveEdits$.next()"
+                    [style.color]="(formulaEditorService.editorExprHasErrors$ | async) ? 'red' : 'green'"></fa-icon>
+            </li>
+            <form class="form-inline my-2 my-lg-0">
+                <frmdb-formula-code-editor></frmdb-formula-code-editor>
+            </form>
         </ul>
     </div>
 </nav>
