--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -79,7 +79,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link pr-1" title="Choose Theme" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" title="Choose Theme" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <!-- <fa-icon [icon]="themeIcon" class="fa-sm"></fa-icon> -->
                     Look
                 </a>
@@ -101,7 +101,7 @@
             </li>
             <li class="nav-item"><a class="nav-link disabled p-0" href="#" tabindex="-1" aria-disabled="true">&</a></li>
             <li class="nav-item dropdown">
-                <a class="nav-link pl-1" title="Auto-Layout" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" title="Auto-Layout" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <!-- <fa-icon [icon]="layoutIcon" class="fa-sm"></fa-icon> -->
                     Feel
                 </a>
